'GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.17.0

  - Added support for new lo_import_with_oid function.
    [GSM] (CPAN bug #53835)
  - Don't limit stored user name to \w in tests (CPAN bug #54372)

2.16.1 Released January 20, 2010 (subversion r13756)

  - Output error messages in UTF-8 as needed. Reported by 
    Michael Hofmann. [GSM] (CPAN bug #53854)

2.16.0 Released December 17, 2009 (subversion r13672)

 - Put in a test for high-bit characters in bytea handling.
   [Bryce Nesbitt] (see also CPAN bug #39390)

 - Better SQLSTATE code on connection failure (CPAN bug #52863)
   [Chris Travers with help from Andrew Gierth]

 - Fixed POD escapes (CPAN bug #51856) [FWIE@cpan.org]

2.15.1 Released August 7, 2009 (subversion r13173)

  - Release to fix the SIGNATURE file. [GSM]

2.15.0 Released August 4, 2009 (subversion r13164)

  - Use PQexecPrepared even when no placeholders (CPAN bug #48155) [GSM]
  - Allow execute_array and bind_param_array to take oddly numbered items, 
    such that DBI will make missing entries undef/null (CPAN bug #39829) [GSM]
  - Put single quotes around array literals when quoting arrays via
    the quote() method. Per report from David Garamond (CPAN bug #48420) [GSM]

2.14.1 Released July 28, 2009 (subversion r13140)

  - Remove invalid bigint assignment [Tim Bunce]

2.14.0 Released July 27, 2009 (subversion r13130)

  - Make quoting of int, floats, and names much safer. (CPAN bug #41565) [GSM]
  - Make quoting of geometric types respect all valid chars (CPAN bug #41565) [GSM]
  - Fix quoting of booleans to respect more Perlish variants (CPAN bug #41565) [GSM]
  - Return ints and bools-cast-to-number from the db as true Perlish numbers.
    (CPAN bug #47619) [GSM]
  - Fix backslash quoting of arrays (CPAN bug #46732) [GSM]
  - Fix error when destringifying array starting with '[x:y]='. Per report from 
    Jeff Trout [GSM]
  - Fix problem with foreign_key_info() and NAME_uc (CPAN bug #46109) [GSM]