@@ -2,6 +2,7 @@
 
 2.17.0
 
+  - Do not automatically ROLLBACK on a failed pg_cancel (CPAN bug #55188)
   - Added support for new lo_import_with_oid function.
     [GSM] (CPAN bug #53835)
   - Don't limit stored user name to \w in tests (CPAN bug #54372)
